# real-time-blink-detection

./: .gitignore  README.md  blink_detection.ipynb  blink_detection.json  example.ipynb  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  docker-compose.yml
blink_detector/: __init__.py  blink_detector.py  helper.py  requirements.txt
blink_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
blink_detector/data/2023-05-24_10-30-56-f30377fc/: Neon Scene Camera v1 ps1.time  Neon Scene Camera v1 ps1.time_aux  Neon Sensor Module v1 ps1.time  Neon Sensor Module v1 ps1.time_aux  all_blink_events.npy  event.time  extimu ps1.raw  extimu ps1.time  gaze ps1.raw  gaze ps1.time  gaze_right ps1.raw  gaze_right ps1.time  info.json  worn ps1.raw
blink_detector/data/2023-05-24_10-34-02-5332eb06/: Neon Scene Camera v1 ps1.time  Neon Scene Camera v1 ps1.time_aux  Neon Sensor Module v1 ps1.time  Neon Sensor Module v1 ps1.time_aux  all_blink_events.npy  annotations-2023-05-24_10-34-02-5332eb06.json  event.time  gaze ps1.raw  gaze ps1.time  gaze_right ps1.raw  gaze_right ps1.time  (+1 more)
blink_detector/weights/: xgb.sav  xgb_151_savedwith171.json  xgb_neon.sav  xgb_neon_151_savedwith171.json  xgb_neon_171.sav
data/padel_tennis_neon_03-2ded8f56/: Neon Scene Camera v1 ps1.time  Neon Scene Camera v1 ps1.time_aux  Neon Sensor Module v1 ps1.time_aux  blinks.json  event.time  gaze ps1.time  gaze_offline.npy  gaze_offline_timestamps.npy  gaze_right ps1.raw  headset_on_off_predictions.npy  info.json  optic_flow_vectors.npz  scanpath.json  worn ps1.raw
(+73 files in other folders)
