[project]
name = "blink_detector"
description = "Pupil-Labs blink detection"
version = "0.0"
authors = [
    {name = "Paul Joseph"},
]
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
urls = {Repository = "https://github.com/pupil-labs/real-time-blink-detection"}
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["black", "flake8", "isort"]

[tool.setuptools]
packages = ["blink_detector"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile = "black"